--- a/ChoirJireh/ChoirJireh.csproj
+++ b/ChoirJireh/ChoirJireh.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CSharp-Engine\Engine.csproj" />
+  </ItemGroup>
+
 </Project>
